--- a/_themes/ploneorg/theme.conf
+++ b/_themes/ploneorg/theme.conf
@@ -7,7 +7,7 @@ pygments_style = sphinx
 
 [options]
 # Place here your Disqus id 
-disqus_name = false
+disqus_name = true
 highlight_language = guess
 short_title = Home
 logo = pylons.png
