Fix repo branch in Travis-build

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
 - mkdir -p buildout-cache/downloads
 - virtualenv buildout
 - buildout/bin/python bootstrap.py -c travis.cfg
-- bin/buildout -N -t 3 -c travis.cfg buildout:checkout=documentation sources:documentation="fs documentationbranch=sources-only egg=false"
+- bin/buildout -N -t 3 -c travis.cfg buildout:checkout=documentation sources:documentation="fs documentation egg=false"
 before_script:
 - gem install --version 0.8.9 faraday
 - gem install travis-artifacts
