--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python: '2.7'
 install:
-- git clone https://github.com/plone/papyrus .. && cd ../papyrus
+- git clone https://github.com/plone/papyrus ../papyrus && cd ../papyrus
 - mkdir source && ln -s ../../documentation source/documentation
 - mkdir -p buildout-cache/downloads
 - virtualenv buildout
