--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ notifications:
     - irc.freenode.org#plone-docs
     template:
     - ! '%{repository}#%{build_number} (%{branch} | %{commit} | %{author}): %{message}'
-    - ! 'Sphinx: http://plone-documentation.s3-website-us-east-1.amazonaws.com/artifacts/%{build_number}/%{build_number}.1/'
+    - ! 'Sphinx: http://plone-documentation.s3-website-us-east-1.amazonaws.com/artifacts/%{build_number}/%{build_number}.1/en/'
 env:
   global:
   - ARTIFACTS_S3_BUCKET=plone-documentation
