Fix to build only English docs in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ install:
 before_script:
 - gem install --version 0.8.9 faraday
 - gem install travis-artifacts
-script: make html
+script:
+- LANGS=en make html
 after_script:
 - travis-artifacts upload --path build/html
 - travis-artifacts upload --target-path latest --path build/html
@@ -27,7 +28,6 @@ notifications:
     - ! 'Sphinx: http://plone-documentation.s3-website-us-east-1.amazonaws.com/artifacts/%{build_number}/%{build_number}.1/en/'
 env:
   global:
-  - LANGS=en
   - ARTIFACTS_S3_BUCKET=plone-documentation
   - secure: B1NL93YgevEmUmvogdnq6Cz1GFvsFiYyCIv6yvudss2f9jzX1nzolbXiH8bFDwJnNQmkzFSm+fzWRDCSvoO8KnvLHTOjsrlcLQ6Er9A/vNQU1DgBvoqxBI7Y+h8OrTzhGK7YENAD/1PkSXmt/OAji/YKJNSULTawpGN1hGBfEio=
   - secure: Bn6H7ckcLTZrR73FcoqWH2ukzlQKGyDyFFAPN9FbJ0/gPH3a/6XLMe59WH6pYcvzxotxfvaQEloTuXnJvjn/f7lTkRHU1Z+DbymdmXuhNCv0meMwg0EhSKiqfYpUqhs/1Jn/fqUnxcFu66Ts905DKs1fnBbWHG5+JmVkslFaRSo=
