--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: python
 python: '2.7'
 before_install:
-- apt-get install enchant
+- sudo apt-get update -qq
+- sudo apt-get install -qq enchant
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
 install:
