--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 install:
 - git clone https://github.com/plone/papyrus ../papyrus && cd ../papyrus
 - python bootstrap-buildout.py --setuptools-version=18.0.1 --version=2.4.0
-- bin/buildout -N -t 3 
+- bin/buildout -N -t 3 buildout:checkout=documentation sources:documentation="git https://github.com/plone/documentation egg=false" 
 before_script:
 - gem install --version 0.8.9 faraday
 - gem install travis-artifacts
