--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 - make install
 - cd ..
 install:
-- git clone https://github.com/plone/papyrus ../papyrus && cd ../papyrus
+- git clone -b 4.3 https://github.com/plone/papyrus ../papyrus && cd ../papyrus
 - mkdir -p buildout-cache/downloads
 - python bootstrap-buildout.py
 - bin/buildout -N -t 3 buildout:checkout=documentation sources:documentation="git https://github.com/plone/documentation egg=false branch=4.3"
