--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 install:
 - git clone https://github.com/plone/papyrus ../papyrus && cd ../papyrus
 - python bootstrap-buildout.py --setuptools-version=18.0.1 --version=2.4.0
-- bin/buildout -N -t 3 buildout:eggs-directory=../eggs buildout:checkout=documentation sources:documentation="git https://github.com/plone/documentation egg=false"
+- bin/buildout -N -t 3 buildout:eggs-directory=../eggs buildout:checkout=documentation sources:documentation="git https://github.com/plone/documentation egg=false" versions:plone.app.robotframework=0.9.13
 before_script:
 - echo '[general]' > docutils.conf
 - echo 'report_level = 5' >> docutils.conf
