--- a/.travis.yml
+++ b/.travis.yml
@@ -13,15 +13,15 @@ before_install:
 - cd ..
 install:
 - git clone https://github.com/plone/papyrus ../papyrus && cd ../papyrus
-- python bootstrap-buildout.py --setuptools-version=18.0.1 --version=2.4.0
-- bin/buildout -N -t 3 buildout:eggs-directory=../eggs buildout:checkout=documentation sources:documentation="git https://github.com/plone/documentation egg=false" versions:plone.app.robotframework=0.9.14
+- mkdir -p source && ln -s ../../documentation source/documentation
+- python bootstrap-buildout.py --setuptools-version=18.3.1 --version=2.4.3
+- bin/buildout -N -t 3 buildout:eggs-directory=../eggs buildout:checkout=documentation sources:documentation="fs documentation egg=false" versions:plone.app.robotframework=0.9.14
 before_script:
 - echo '[general]' > docutils.conf
 - echo 'report_level = 5' >> docutils.conf
-- rm -rf source/documentation/external/plone.app.robotframework
 script:
-- bin/pybot --listener plone.app.robotframework.server.LazyStop source
-- LANGS=en make html SPHINXOPTS="-D sphinxcontrib_robotframework_enabled=0"
+- make screenshots
+- LANGS=en make html
 after_script:
 cache:
   directories:
