WIP Testing CI - change /home/svx/bin:/home/svx/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin to docs in test

--- a/circle.yml
+++ b/circle.yml
@@ -9,5 +9,5 @@ dependencies:
 
 test:
   override:
-    - docker run -it -v "${PWD}"/docs:/source:rw testthedocs/ttd.coala '-c=/source/.coafile' -C WG
+    - docker run -it -v "${PWD}":/source:rw testthedocs/ttd.coala '-c=/source/.coafile' -C WG
 
