Update tests and test container

--- a/circle.yml
+++ b/circle.yml
@@ -15,10 +15,10 @@ machine:
 dependencies:
   override:
     - docker info
-    - docker pull testthedocs/ttd.coala
+    - docker pull testthedocs/ttd-coala
     - docker pull testthedocs/plone-lint
 
 test:
   override:
-    - docker run -it -v "${PWD}":/source:rw testthedocs/ttd.coala '-c=/source/.coafile' -C WG
+    - docker run -it --rm -v "${PWD}":/srv testthedocs/ttd-coala
     - docker run -it -v "${PWD}":/srv/docs:rw -v $(pwd)/.ttd-lintrc:/srv/.ttd-lintrc testthedocs/plone-lint
