[docs] Improve wording, start with plone styles (vale)

--- a/source/.vale.ini
+++ b/source/.vale.ini
@@ -6,9 +6,19 @@ MinAlertLevel = warning # suggestion, warning or error
 # Only Markdown and .txt files; change to whatever you're using.
 [*.{md,rst}]
 # List of styles to load.
+BasedOnStyles = proselint, plone
 proselint.But = suggestion
 proselint.Diacritical = suggestion
 proselint.GenderBias = error
 proselint.Uncomparables = warning
 proselint.Very = warning
 proselint.Simple = warning
+plone.Header = warning
+#plone.Readability = warning
+plone.Quotes = warning
+plone.Anthropomorphism = warning
+plone.Terms = warning
+plone.ThereIs = warning
+plone.Wording = warning
+plone.E-Prime = warning
+plone.Spacing = warning
