[meta] Adjust checks, start with spell check

--- a/source/.vale.ini
+++ b/source/.vale.ini
@@ -1,5 +1,6 @@
 # This goes in a file named either `.vale.ini` or `_vale.ini`.
 
+#StylesPath = ../styles
 StylesPath = styles
 MinAlertLevel = warning # suggestion, warning or error
 
@@ -22,3 +23,4 @@ plone.ThereIs = warning
 plone.Wording = warning
 plone.E-Prime = warning
 plone.Spacing = warning
+plone.Spelling = error
