[docs] More work on wording styles and checks

--- a/source/.vale.ini
+++ b/source/.vale.ini
@@ -1,7 +1,7 @@
 # This goes in a file named either `.vale.ini` or `_vale.ini`.
 
-#StylesPath = ../styles
-StylesPath = styles
+StylesPath = ../styles
+#StylesPath = styles
 MinAlertLevel = warning # suggestion, warning or error
 
 # Only Markdown and .txt files; change to whatever you're using.
@@ -14,9 +14,9 @@ proselint.GenderBias = error
 proselint.Uncomparables = warning
 proselint.Very = warning
 proselint.Simple = warning
-plone.Header = warning
+#plone.Header = warning
 #plone.Readability = warning
-plone.Quotes = warning
+#plone.Quotes = warning
 plone.Anthropomorphism = warning
 plone.Terms = warning
 plone.ThereIs = warning
