--- a/styles/plone/Terms.yml
+++ b/styles/plone/Terms.yml
@@ -16,4 +16,5 @@ swap:
   simple: "'straightforward', 'uncomplicated', or 'clear'"
   easy: "'effortless','straightforward', 'uncomplicated', or 'manageable'"
   retina: "'HiDPI'"
+  webserver: "'web server'"
   #javascript: "'JavaScript'"
