[docs] Add more vale checks

--- a/source/.vale.ini
+++ b/source/.vale.ini
@@ -24,3 +24,5 @@ plone.Wording = warning
 plone.E-Prime = warning
 plone.Spacing = warning
 plone.Spelling = error
+plone.Ages = warning
+plone.OxfordComma = warning
