[meta] Start to improve yaml of vale checks

--- a/styles/plone/ThereIs.yml
+++ b/styles/plone/ThereIs.yml
@@ -1,3 +1,5 @@
+---
+# Checks if a sentence is starting with "There is"
 extends: existence
 message: "Don't start a sentence with '%s'"
 ignorecase: true
