[meta] styles are passing yamllint now

--- a/styles/plone/Header.yml
+++ b/styles/plone/Header.yml
@@ -1,7 +1,9 @@
+---
 extends: capitalization
 message: "'%s' should be in title case"
 level: warning
 scope: heading
 # $title, $sentence, $lower, $upper, or a pattern.
 match: $title
-style: AP # AP or Chicago; only applies when match is set to $title
+# Style AP or Chicago; only applies when match is set to $title
+style: AP
