--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -q -r requirements.txt -c constraints.txt
+          pip install -q -r requirements.txt
 
       - name: Run tests with make test
         run: make test
