Set branch for submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "submodules/volto"]
 	path = submodules/volto
 	url = git@github.com:plone/volto.git
+[submodule "submodules/volto/"]
+	branch = plone6-docs
