--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,4 @@
 [submodule "submodules/volto"]
 	path = submodules/volto
-	url = git@github.com:plone/volto.git
-[submodule "submodules/volto/"]
+	url = https://github.com/plone/volto.git
 	branch = plone6-docs
