--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -28,20 +28,20 @@ jobs:
       - name: Run linkcheck
         run: make linkcheck
 
-#      - name: Prepare deploy
-#        run: make deploy
-#
-#      - name: Deploy to server
-#        id: deploy
-#        uses: Pendect/action-rsyncer@v1.1.0
-#        env:
-#          DEPLOY_KEY: ${{secrets.DEPLOY_KEY_TRAINING}}
-#        with:
-#          flags: '-avzr --delete'
-#          options: ''
-#          ssh_options: '-p ${{secrets.DEPLOY_PORT}}'
-#          src: '_build/html/'
-#          dest: '${{secrets.DEPLOY_USER_TRAINING}}@${{secrets.DEPLOY_SERVER_TRAINING}}:${{secrets.DEPLOY_PATH_TRAINING}}/5'
-#
-#      - name: Display status from deploy
-#        run: echo "${{ steps.deploy.outputs.status }}"
+     - name: Prepare deploy
+       run: make deploy
+
+     - name: Deploy to server
+       id: deploy
+       uses: Pendect/action-rsyncer@v1.1.0
+       env:
+         DEPLOY_KEY: ${{secrets.DEPLOY_KEY_DOCS}}
+       with:
+         flags: '-avzr --delete'
+         options: ''
+         ssh_options: '-p ${{secrets.DEPLOY_PORT}}'
+         src: '_build/html/'
+         dest: '${{secrets.DEPLOY_USER_DOCS}}@${{secrets.DEPLOY_SERVER_DOCS}}:${{secrets.DEPLOY_PATH_DOCS}}'
+
+     - name: Display status from deploy
+       run: echo "${{ steps.deploy.outputs.status }}"
