Prepare for Volto docs merge of `plone6-docs` into `master` See https://github.com/plone/volto/pull/3001#issuecomment-1042732058

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "submodules/volto"]
 	path = submodules/volto
 	url = https://github.com/plone/volto.git
-	branch = plone6-docs
+	branch = master
