--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Prepare deploy
         run: make deploy
 
+      - name: StoryBook build
+        run: cd submodules/volto && yarn && yarn build-storybook -o _build/html/storybook
+
       - name: Deploy to server
         id: deploy
         uses: Pendect/action-rsyncer@v1.1.0
