Pull in plone.restapi docs

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = submodules/volto
 	url = https://github.com/plone/volto.git
 	branch = master
+[submodule "submodules/plone.restapi"]
+	path = submodules/plone.restapi
+	url = git@github.com:plone/plone.restapi.git
+	branch = plone6docs
