Fix build dir for Storybook

--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -51,7 +51,7 @@ jobs:
 
 
       - name: StoryBook build
-        run: cd submodules/volto && yarn && yarn build-storybook -o _build/html/storybook
+        run: cd submodules/volto && yarn && yarn build-storybook -o ../../_build/html/storybook
 
       - name: Deploy to server
         id: deploy
