--- a/.gitmodules
+++ b/.gitmodules
@@ -4,5 +4,5 @@
 	branch = master
 [submodule "submodules/plone.restapi"]
 	path = submodules/plone.restapi
-	url = git@github.com:plone/plone.restapi.git
+	url = https://github.com/plone/plone.restapi.git
 	branch = plone6docs
