--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ myst-parser
 sphinx-autobuild
 sphinx-book-theme<=0.3.99
 sphinx-copybutton
+sphinx-design
 sphinx-sitemap
 sphinx-togglebutton
 sphinxcontrib.httpdomain  # plone.restapi
