--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,4 @@ sphinxcontrib.httpdomain  # plone.restapi
 sphinxcontrib.httpexample  # plone.restapi
 sphinxcontrib-spelling
 sphinxext-opengraph
+graphviz
