--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ sphinxcontrib.httpdomain  # plone.restapi
 sphinxcontrib.httpexample  # plone.restapi
 sphinxcontrib-spelling
 sphinxext-opengraph
+graphviz
