--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ jsx-lexer  # volto
 lesscpy
 linkify-it-py
 myst-parser
+pydata-sphinx-theme<=0.8.99  # Build fails in 0.9.0. See https://github.com/plone/documentation/issues/1297
 sphinx-autobuild
 sphinx-book-theme<=0.3.99
 sphinx-copybutton
