--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -q -r requirements.txt
+          pip freeze
 
       # - name: Run spellcheck
       #   run: make spellcheck
