--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -40,6 +40,4 @@ jobs:
           git add submodules/plone.api submodules/plone.restapi submodules/volto
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git commit -m "Update submodules tip"
-          git push
-
+          git diff --exit-code && git commit -m "Update submodules tip" && git push
