Revert "Fix branch"
This reverts commit 00e75bef22256a6a23874607d43a22778269f380.

--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -4,8 +4,8 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - "esteele-build-docs"
-      
+      - "6-dev"
+
 jobs:
   build_deploy:
     runs-on: ubuntu-latest
