--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -4,37 +4,27 @@ on:
   workflow_dispatch:
 
 jobs:
-  build_deploy:
+  update_submodules:
     runs-on: ubuntu-latest
     steps:
       # Checkout
       - uses: actions/checkout@v3
         with: 
           ref: 6-dev
-      
-      # Pull latest plone.api
-      - name: Pull latest plone.api
-        run: |
-          cd submodules/plone.api
-          git pull
+          submodules: true
 
-      # Pull latest plone.restapi
-      - name: Pull latest plone.restapi
+      - name: Submodule update
         run: |
-          cd submodules/plone.restapi
-          git pull
+          git status
+          git submodule update --init --recursive
+          git submodule update --remote --recursive
 
-      # Pull latest Volto
-      - name: Pull latest Volto
-        run: |
-          cd submodules/volto
-          git pull
-
-      # Update, commit, and push
-      - name : Update tips
+      - name: Commit updates
         run: |
           git status
           git add submodules/plone.api submodules/plone.restapi submodules/volto
+          git status
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git diff --exit-code && git commit -m "Update submodules tip" && git push
+          git commit -m "Update submo0dules tip" || echo "No changes to commit"
+          git push
