--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -q -r requirements.txt
+          snap install --edge vale
 
       - name: Run tests with make test
-        run: make test
+        run: make test vale
