--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,4 +24,5 @@ jobs:
 
       - name: Run tests with make test
         run: |
-          make test
+          echo "VALEFILES=$(find -L ./docs/ -type d \\( -path ./docs/plone.restapi/lib/* -o -path "./docs/plone.restapi/performance/*" \\) -prune -false -o -type f -name "*.md" -print)" >> $GITHUB_ENV
+          make vale ${{ env.VALEFILES }}
