Don't try to install Microsoft files, remove from vale config

--- a/.vale.ini
+++ b/.vale.ini
@@ -4,7 +4,6 @@ MinAlertLevel = suggestion
 
 Vocab = Base,Plone
 
-Packages = Microsoft
 
 [*]
-BasedOnStyles = Vale, Microsoft
+BasedOnStyles = Vale
