Don't use scoped GHA env var

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,6 @@ jobs:
 
       - name: Run tests with make test
         run: |
-          echo "VALEFILES=$(find -L ./docs/ -type d \( -path ./docs/plone.restapi/lib/* -o -path "./docs/plone.restapi/performance/*" \) -prune -false -o -type f -name "*.md" -print)" >> $GITHUB_ENV
-          echo "${{ env.VALEFILES }}"
-          make vale ${{ env.VALEFILES }}
+          VALEFILES=$(find -L ./docs/ -type d \( -path ./docs/plone.restapi/lib/* -o -path "./docs/plone.restapi/performance/*" \) -prune -false -o -type f -name "*.md" -print)
+          echo "$VALEFILES"
+          make vale $VALEFILES
