Remove debugging statements, try installing Microsoft styles again

--- a/.vale.ini
+++ b/.vale.ini
@@ -4,6 +4,7 @@ MinAlertLevel = suggestion
 
 Vocab = Base,Plone
 
+Packages = Microsoft
 
 [*]
-BasedOnStyles = Vale
+BasedOnStyles = Vale, Microsoft
