--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Run tests with make test
         run: |
           git clone https://github.com/errata-ai/Microsoft.git
+          mkdir ./styles/Microsoft
           cp –R ./Microsoft ./styles/Microsoft
           make deps
           VALEFILES=$(find -L ./docs/ -type d \( -path "./docs/plone.restapi/lib/*" -o -path "./docs/plone.restapi/performance/*" \) -prune -false -o -type f -name "*.md" -print)
