--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,9 +27,9 @@ jobs:
           git clone https://github.com/errata-ai/Microsoft.git
           mkdir ./styles/Microsoft
           ls -alR ./styles
-          ls -alR ./Microsoft
+          ls -alR ./Microsoft/Microsoft
           pwd
-          cp –r ./Microsoft/ ./styles/Microsoft/
+          cp –r ./Microsoft/Microsoft/ ./styles/Microsoft/
           make deps
           VALEFILES=$(find -L ./docs/ -type d \( -path "./docs/plone.restapi/lib/*" -o -path "./docs/plone.restapi/performance/*" \) -prune -false -o -type f -name "*.md" -print)
           make vale $VALEFILES
