--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,12 +25,7 @@ jobs:
       - name: Run tests with make test
         run: |
           git clone https://github.com/errata-ai/Microsoft.git
-          mkdir ./styles/Microsoft
-          find ./Microsoft/Microsoft/ -type f | while read fname; do
-            dirname=`dirname "$fname"`
-            filename=`basename "$fname"`
-            cp "${dirname}/$filename" "./styles/Microsoft"
-          done
+          cp -r ./Microsoft/Microsoft ./styles
           make test
           VALEFILES=$(find -L ./docs/ -type d \( -path "./docs/plone.restapi/lib/*" -o -path "./docs/plone.restapi/performance/*" \) -prune -false -o -type f -name "*.md" -print)
           make vale $VALEFILES
