--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,10 +22,10 @@ jobs:
           pip install -q -r requirements.txt
           sudo snap install --edge vale
 
-      - name: Run tests with make test
+      - name: Run tests with make test and vale
         run: |
+          make test
           git clone https://github.com/errata-ai/Microsoft.git
           cp -r ./Microsoft/Microsoft ./styles
-          make test
           VALEFILES=$(find -L ./docs/ -type d \( -path "./docs/plone.restapi/lib/*" -o -path "./docs/plone.restapi/performance/*" \) -prune -false -o -type f -name "*.md" -print)
-          make vale $VALEFILES --no-exit
+          vale --no-exit $VALEFILES
