--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 docutils<0.17,>=0.15  # sphinx-book-theme 0.2.0 has requirement docutils<0.17,>=0.15
-Sphinx
+Sphinx<5,>=3  # sphinx-book-theme 0.3.3 has requirement sphinx<5,>=3
 jsx-lexer  # volto
 lesscpy
 linkify-it-py
@@ -8,8 +8,8 @@ pydata-sphinx-theme<=0.8.99  # Build fails in 0.9.0. See https://github.com/plon
 sphinx-autobuild
 sphinx-book-theme==0.3.3  # Temporary pin until we can sort out HTML refactoring.
 sphinx-copybutton
-sphinx-design
-sphinx-notfound-page
+sphinx-design  # Documentation only
+sphinx-notfound-page  # Documentation only
 sphinx-sitemap
 sphinx-togglebutton
 sphinxcontrib.httpdomain  # plone.restapi
