--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,4 @@ sphinx-togglebutton
 sphinxcontrib.httpdomain  # plone.restapi
 sphinxcontrib.httpexample  # plone.restapi
 sphinxext-opengraph
+sphinx-design
