Fix URL in comment to correct one

--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -1,4 +1,4 @@
-name: Build and deploy Plone 6 documentation to 6.dev-docs.plone.org
+name: Build and deploy Plone 6 documentation to 6.docs.plone.org
 
 on:
   push:
