--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,4 @@ sphinxcontrib.httpdomain  # plone.restapi
 sphinxcontrib.httpexample  # plone.restapi
 sphinxext-opengraph
 sphinx-design
+sphinxcontrib-video
