build-deploy workflow: Install yarn manually
and not use the cache statement, it complains about the yarn.lock file not being in the root of the checkout/repo.

--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -35,8 +35,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16'
-          cache: 'yarn'
-
+      - name: Install Yarn
+        run: npm install -g yarn
       # node cache
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
