Maybe install graphviz in ubuntu?

--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -17,6 +17,7 @@ jobs:
           cache: 'pip'
       - name: Install dependencies
         run: |
+          apt install graphviz
           pip install -q -r requirements-initial.txt
           pip install -q -r requirements.txt
           pip freeze
