Attempt to allow test job to run on pull request from external branch Refs: https://github.com/plone/volto/pull/4629/files

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,9 @@
 name: Test Plone 6 documentation
 
-on:
-  push:
-    branches-ignore:
-      - "master"
-
+on: [push, pull_request]
 jobs:
   test:
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
