add to linkcheckignore volto/issues/4461

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,12 @@
 pyvenv.cfg
 /_build
 /styles/Microsoft
+/share
 
 # symlinked from submodule
 docs/volto
 docs/plone.restapi
 docs/plone.api
+
+# editor files
+.vscode
