--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -1,4 +1,4 @@
-name: Get latest version of submodules and push back to 6-dev branch
+name: Get latest version of submodules and push back to 6.0 branch
 
 on:
   workflow_dispatch:
@@ -10,7 +10,7 @@ jobs:
       # Checkout
       - uses: actions/checkout@v3
         with: 
-          ref: 6-dev
+          ref: 6.0
           submodules: true
 
       - name: Submodule update
