--- a/.gitmodules
+++ b/.gitmodules
@@ -5,7 +5,7 @@
 [submodule "submodules/plone.restapi"]
 	path = submodules/plone.restapi
 	url = https://github.com/plone/plone.restapi.git
-	branch = master
+	branch = main
 [submodule "submodules/plone.api"]
 	path = submodules/plone.api
 	url = https://github.com/plone/plone.api.git
