--- a/.github/workflows/nuclia_sync.yml
+++ b/.github/workflows/nuclia_sync.yml
@@ -4,7 +4,7 @@ on: [push]
 jobs:
   sync:
     runs-on: ubuntu-latest
-
+    environment: staging.docs.plone.org
     steps:
       - name: Check out code
         uses: actions/checkout@v3
@@ -22,6 +22,9 @@ jobs:
       - name: Run Nuclia Sync
         run: |
           python3 upload.py
+        env:
+          KB_URL: ${vars.DEPLOY_NUCLIA_KB_URL}
+          KB_SECRET: ${secrets.DEPLOY_NUCLIA_TOKEN}
 
       - name: Commit changes
         run: |
