--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "submodules/volto"]
 	path = submodules/volto
 	url = https://github.com/plone/volto.git
-	branch = master
+	branch = main
 [submodule "submodules/plone.restapi"]
 	path = submodules/plone.restapi
 	url = https://github.com/plone/plone.restapi.git
